# sk-tau-rock_methods

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  clear.sh  configure.sh  main.cpp
install/: Plot_path.m  TauLeapMethods  help.txt
install/ReversibleIsomerization/: sol_MCinfo.csv  sol_statistics.csv
src/: main.cpp
src/cpp/: CMakeLists.txt  ChebyshevMethods.cpp  ChemicalSystem.cpp  ImplicitTauLeap.cpp  MonteCarlo.cpp  Parameters.cpp  ProblemsList.cpp  R-tau-ROCK.cpp  SK-tau-ROCK.cpp  SSA.cpp  Solver.cpp  SplitStepImplicitTau.cpp  StabilizedTauLeapMethod.cpp  TauLeap.cpp  TauLeapMethod.cpp  TrapezoidalTauLeap.cpp  tau-ROCK.cpp
src/hpp/: ChebyshevMethods.h  ChemicalSystem.h  ImplicitTauLeap.h  MonteCarlo.h  Parameters.h  ProblemsList.h  R-tau-ROCK.h  SK-tau-ROCK.h  SSA.h  Solver.h  SplitStepImplicitTau.h  StabilizedTauLeapMethod.h  TauLeap.h  TauLeapMethod.h  TrapezoidalTauLeap.h  headers.h  tau-ROCK.h
src/matlab/: Plot_path.m
